<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginEnd="16dp"
    android:layout_margin="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:id="@+id/txtNome"
    android:gravity="center"
    android:text="@string/inser_your_data"
    android:textSize="25sp"
    android:textColor="@color/DarkRed"
    android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:id="@+id/edtNome"
        android:hint="@string/Nome"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/edtSobrenome"
        android:hint="@string/lastname"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/edtIdade"
        android:hint="@string/age"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnEnviar"
        android:text="@string/send"
        android:layout_height="wrap_content"
        />

</LinearLayout>