<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:id="@+id/LinearLayout1"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginEnd="16dp"
    android:layout_margin="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    >

    <TextView
        android:text="@string/meu_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        />

    <TextView
    android:id="@+id/nomeTexto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
    />

    <TextView
        android:text="@string/meu_sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:id="@+id/sobrenomeTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:text="@string/minha_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/idadeTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        />

</LinearLayout>